removed Category related code; transformed backend into a pure data provider