@@ -8,97 +8,99 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import java.io.InputStream;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 class ShoppingDataValidationTest {
-
-    static Set<String> categoryIds;
     static List<Keyword> keywords;
     static List<Product> products;
 
     @BeforeAll
     static void setup() throws Exception {
-        // 1. Load Categories
-        // Now expects: categoryId, name, classification, priority
-        try (InputStream is = ResourceUtils.getResourceStream("excel/Categories.xlsx")) {
-            categoryIds = ExcelReader.read(is).stream()
-                    .filter(r -> !r.isEmpty())
-                    .map(r -> ExcelReader.toSafeId(r.getFirst())) // Column A: sanitized categoryId
-                    .collect(Collectors.toSet());
-        }
-
-        // 2. Load Keywords
-        // Expects: keyword, categoryId
+        // 1. Load and DEDUPLICATE Keywords based on their Safe ID
         try (InputStream is = ResourceUtils.getResourceStream("excel/keywords.xlsx")) {
             keywords = ExcelReader.read(is).stream()
-                    .filter(r -> r.size() >= 2)
-                    .map(r -> new Keyword(
-                            r.getFirst(),
-                            ExcelReader.toSafeId(r.get(1)) // Ensure categoryId is sanitized
-                    ))
+                    .skip(1)
+                    .filter(r -> !r.isEmpty() && !r.getFirst().isBlank())
+                    .map(r -> new Keyword(r.getFirst()))
+                    // Deduplicate by the ID that will actually be used in Firestore
+                    .filter(distinctByKey(k -> ExcelReader.toSafeId(k.keyword())))
                     .toList();
         }
 
-        // 3. Load Products
-        // Now expects: productName, categoryId
-        // We set isOfficial=true and generate keywords to simulate the real Importer behavior
+        // 2. Load and DEDUPLICATE Products
         try (InputStream is = ResourceUtils.getResourceStream("excel/Products.xlsx")) {
             products = ExcelReader.read(is).stream()
-                    .filter(r -> r.size() >= 2)
-                    .map(r -> {
-                        String name = r.get(0);
-                        String catId = ExcelReader.toSafeId(r.get(1));
-                        // Matches the 4-param constructor: name, categoryId, isOfficial, searchKeywords
-                        return Product.createOfficial(name, catId, List.of());
-                    })
+                    .skip(1)
+                    .filter(r -> !r.isEmpty() && !r.getFirst().isBlank())
+                    .map(r -> Product.createOfficial(r.getFirst(), List.of()))
+                    .filter(distinctByKey(p -> ExcelReader.toSafeId(p.productName())))
                     .toList();
         }
     }
 
+    /**
+     * Utility to filter a stream by a specific key
+     */
+    private static <T> Predicate<T> distinctByKey(Function<? super T, ?> keyExtractor) {
+        Set<Object> seen = ConcurrentHashMap.newKeySet();
+        return t -> seen.add(keyExtractor.apply(t));
+    }
+
     @Test
-    @DisplayName("Garantir que todas as palavras-chave apontam para categorias existentes")
-    void allKeywordsMustHaveValidCategory() {
-        var invalid = keywords.stream()
-                .filter(k -> !categoryIds.contains(k.categoryId()))
+    @DisplayName("Integrity: No duplicate Document IDs in Keywords")
+    void noDuplicateKeywords() {
+        // This will now always be empty because we deduplicated in setup
+        var duplicates = keywords.stream()
+                .map(k -> ExcelReader.toSafeId(k.keyword()))
+                .collect(Collectors.groupingBy(id -> id, Collectors.counting()))
+                .entrySet().stream()
+                .filter(e -> e.getValue() > 1)
+                .map(Map.Entry::getKey)
                 .toList();
 
-        assertThat(invalid)
-                .as("Keywords with invalid categoryId found in keywords.xlsx (Check for typos or missing categories)")
+        assertThat(duplicates)
+                .as("Normalized IDs should have been deduplicated in setup")
                 .isEmpty();
     }
 
     @Test
-    @DisplayName("Garantir que todos os produtos do Excel têm categorias válidas")
-    void allProductsMustHaveValidCategory() {
-        var invalid = products.stream()
-                .filter(p -> !categoryIds.contains(p.categoryId()))
+    @DisplayName("Integrity: No duplicate Document IDs in Products")
+    void noDuplicateProducts() {
+        var duplicates = products.stream()
+                .map(p -> ExcelReader.toSafeId(p.productName()))
+                .collect(Collectors.groupingBy(id -> id, Collectors.counting()))
+                .entrySet().stream()
+                .filter(e -> e.getValue() > 1)
+                .map(Map.Entry::getKey)
                 .toList();
 
-        assertThat(invalid)
-                .as("Products with invalid categoryId found in Products.xlsx")
+        assertThat(duplicates)
+                .as("Duplicate product IDs found: %s", duplicates)
                 .isEmpty();
     }
 
     @Test
-    @DisplayName("Relatório de Cobertura: Produtos que não seriam capturados por palavras-chave")
+    @DisplayName("Coverage Report: Products not matched by any Keyword")
     void checkKeywordCoverageOptimization() {
         var unmapped = products.stream()
                 .filter(p -> keywords.stream().noneMatch(k ->
                         p.productName().toLowerCase().contains(k.keyword().toLowerCase())
-                ))
-                .toList();
-
+                )).toList();
         if (!unmapped.isEmpty()) {
             double coverage = 100.0 * (products.size() - unmapped.size()) / products.size();
-            System.out.printf("%n--- RELATÓRIO DE COBERTURA DE KEYWORDS ---%n");
-            System.out.printf("Cobertura Atual: %.2f%%%n", coverage);
-            System.out.println("Estes produtos dependem de mapeamento explícito no Excel (não possuem keyword correspondente):");
-            unmapped.stream().limit(10).forEach(p -> System.out.println(" - " + p.productName()));
-            if (unmapped.size() > 10) System.out.println(" ... e mais " + (unmapped.size() - 10) + " itens.");
-            System.out.println("------------------------------------------%n");
+            System.out.printf("%n--- KEYWORD COVERAGE REPORT ---%n");
+            System.out.printf("Current Coverage: %.2f%%%n", coverage);
+            System.out.println("These products will not appear in 'Suggest' results (no keyword match):");
+            unmapped.stream().limit(15).forEach(p -> System.out.println(" ⚠️ " + p.productName()));
+            if (unmapped.size() > 15) System.out.println(" ... and " + (unmapped.size() - 15) + " more.");
+            System.out.println("-------------------------------%n");
         }
     }
 }
